@@ -423,7 +423,7 @@ public class TestBasics extends TestCase  {
 //        assertEquals(D.getNode(), func.getArgs()[1]);
         
         Literal one = (Literal)foo.getRequiredProperty(propbar).getObject();
-        assertEquals(new Integer(1), one.getValue());
+        assertEquals(Integer.valueOf(1), one.getValue());
     }
     
     /**
